// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioGroup /> Snapshots should has setted the selected value 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
}

.c3 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-width: 126px;
  white-space: nowrap;
  cursor: pointer;
  box-sizing: border-box;
  background-color: transparent;
  border-radius: 9999px;
  font-size: 14px;
  height: 40px;
  padding-left: 24px;
  padding-right: 24px;
}

.c2:hover,
.c2:focus {
  background-color: #F5F5FA;
}

.c4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-width: 126px;
  white-space: nowrap;
  cursor: pointer;
  box-sizing: border-box;
  background-color: transparent;
  border-radius: 9999px;
  background-color: #D8385E;
  box-shadow: 0 0 0 1px #D8385E;
  color: #FFFFFF;
  font-weight: 700;
  z-index: 1;
  font-size: 14px;
  height: 40px;
  padding-left: 24px;
  padding-right: 24px;
}

.c1 {
  border-style: solid;
  border-color: #F5F5FA;
  border-top-width: 1px;
  border-bottom-width: 1px;
  border-left: none;
  border-right: none;
}

.c1:first-child {
  border-right-width: 0;
  border-left-width: 1px;
  border-left-style: solid;
  border-left-color: #F5F5FA;
  border-top-left-radius: 9999px;
  border-bottom-left-radius: 9999px;
}

.c1:last-child {
  border-left-width: 0;
  border-right-width: 1px;
  border-right-style: solid;
  border-right-color: #F5F5FA;
  border-top-right-radius: 9999px;
  border-bottom-right-radius: 9999px;
}

<div>
  <div
    class="c0"
    role="radiogroup"
  >
    <div
      class="c1"
    >
      <label
        class="c2"
      >
        <input
          class="c3"
          name=""
          type="radio"
          value="Option 1"
        />
        Option 1
      </label>
    </div>
    <div
      class="c1"
    >
      <label
        class="c4"
      >
        <input
          checked=""
          class="c3"
          name=""
          type="radio"
          value="Option 2"
        />
        Option 2
      </label>
    </div>
    <div
      class="c1"
    >
      <label
        class="c2"
      >
        <input
          class="c3"
          name=""
          type="radio"
          value="Option 3"
        />
        Option 3
      </label>
    </div>
  </div>
</div>
`;

exports[`<RadioGroup /> Snapshots should match snapshot with default radiogroup 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
}

<div>
  <div
    class="c0"
    role="radiogroup"
  />
</div>
`;

exports[`<RadioGroup /> Snapshots should match snapshot with full radiogroup 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  width: 100%;
}

<div>
  <div
    class="c0"
    role="radiogroup"
  />
</div>
`;

exports[`<RadioGroup /> Snapshots should match snapshot with radios as children 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
}

.c3 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-width: 126px;
  white-space: nowrap;
  cursor: pointer;
  box-sizing: border-box;
  background-color: transparent;
  border-radius: 9999px;
  font-size: 14px;
  height: 40px;
  padding-left: 24px;
  padding-right: 24px;
}

.c2:hover,
.c2:focus {
  background-color: #F5F5FA;
}

.c1 {
  border-style: solid;
  border-color: #F5F5FA;
  border-top-width: 1px;
  border-bottom-width: 1px;
  border-left: none;
  border-right: none;
}

.c1:first-child {
  border-right-width: 0;
  border-left-width: 1px;
  border-left-style: solid;
  border-left-color: #F5F5FA;
  border-top-left-radius: 9999px;
  border-bottom-left-radius: 9999px;
}

.c1:last-child {
  border-left-width: 0;
  border-right-width: 1px;
  border-right-style: solid;
  border-right-color: #F5F5FA;
  border-top-right-radius: 9999px;
  border-bottom-right-radius: 9999px;
}

<div>
  <div
    class="c0"
    role="radiogroup"
  >
    <div
      class="c1"
    >
      <label
        class="c2"
      >
        <input
          class="c3"
          name=""
          type="radio"
          value="Option 1"
        />
        Option 1
      </label>
    </div>
    <div
      class="c1"
    >
      <label
        class="c2"
      >
        <input
          class="c3"
          name=""
          type="radio"
          value="Option 2"
        />
        Option 2
      </label>
    </div>
    <div
      class="c1"
    >
      <label
        class="c2"
      >
        <input
          class="c3"
          name=""
          type="radio"
          value="Option 3"
        />
        Option 3
      </label>
    </div>
  </div>
</div>
`;

exports[`<RadioGroup /> Snapshots should match snapshot with small radios 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
}

.c3 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-width: 126px;
  white-space: nowrap;
  cursor: pointer;
  box-sizing: border-box;
  background-color: transparent;
  border-radius: 9999px;
  font-size: 14px;
  height: 32px;
  padding-left: 24px;
  padding-right: 24px;
}

.c2:hover,
.c2:focus {
  background-color: #F5F5FA;
}

.c1 {
  border-style: solid;
  border-color: #F5F5FA;
  border-top-width: 1px;
  border-bottom-width: 1px;
  border-left: none;
  border-right: none;
}

.c1:first-child {
  border-right-width: 0;
  border-left-width: 1px;
  border-left-style: solid;
  border-left-color: #F5F5FA;
  border-top-left-radius: 9999px;
  border-bottom-left-radius: 9999px;
}

.c1:last-child {
  border-left-width: 0;
  border-right-width: 1px;
  border-right-style: solid;
  border-right-color: #F5F5FA;
  border-top-right-radius: 9999px;
  border-bottom-right-radius: 9999px;
}

<div>
  <div
    class="c0"
    role="radiogroup"
  >
    <div
      class="c1"
    >
      <label
        class="c2"
      >
        <input
          class="c3"
          name=""
          type="radio"
          value="Option 1"
        />
        Option 1
      </label>
    </div>
    <div
      class="c1"
    >
      <label
        class="c2"
      >
        <input
          class="c3"
          name=""
          type="radio"
          value="Option 2"
        />
        Option 2
      </label>
    </div>
    <div
      class="c1"
    >
      <label
        class="c2"
      >
        <input
          class="c3"
          name=""
          type="radio"
          value="Option 3"
        />
        Option 3
      </label>
    </div>
  </div>
</div>
`;

exports[`<RadioGroup /> Snapshots should set the name for all children 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
}

.c3 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-width: 126px;
  white-space: nowrap;
  cursor: pointer;
  box-sizing: border-box;
  background-color: transparent;
  border-radius: 9999px;
  font-size: 14px;
  height: 40px;
  padding-left: 24px;
  padding-right: 24px;
}

.c2:hover,
.c2:focus {
  background-color: #F5F5FA;
}

.c1 {
  border-style: solid;
  border-color: #F5F5FA;
  border-top-width: 1px;
  border-bottom-width: 1px;
  border-left: none;
  border-right: none;
}

.c1:first-child {
  border-right-width: 0;
  border-left-width: 1px;
  border-left-style: solid;
  border-left-color: #F5F5FA;
  border-top-left-radius: 9999px;
  border-bottom-left-radius: 9999px;
}

.c1:last-child {
  border-left-width: 0;
  border-right-width: 1px;
  border-right-style: solid;
  border-right-color: #F5F5FA;
  border-top-right-radius: 9999px;
  border-bottom-right-radius: 9999px;
}

<div>
  <div
    class="c0"
    role="radiogroup"
  >
    <div
      class="c1"
    >
      <label
        class="c2"
      >
        <input
          class="c3"
          data-testid="Option 1"
          name="test"
          type="radio"
          value="Option 1"
        />
        Option 1
      </label>
    </div>
    <div
      class="c1"
    >
      <label
        class="c2"
      >
        <input
          class="c3"
          data-testid="Option 2"
          name="test"
          type="radio"
          value="Option 2"
        />
        Option 2
      </label>
    </div>
    <div
      class="c1"
    >
      <label
        class="c2"
      >
        <input
          class="c3"
          data-testid="Option 3"
          name="test"
          type="radio"
          value="Option 3"
        />
        Option 3
      </label>
    </div>
  </div>
</div>
`;
